# forestry-game

./: .gitignore  Cargo.toml  IOS_BUILD.md  Trunk.toml  app-36d1afdecf89bc9f.js  app-38ce70c7d7cb3c8e.js  app-60612989e11d6e36.js  app-6c5bad62ade35e54.js  app-7932cef6c5acffe4.js  app-8e15167a7ac95fad.js  app-8e35ab7020c9f4fa.js  app-f3156a0882ec7dec.js  forestry-game-2f59033d3f3c4b5f.js  forestry-game-6069f3ae24c6aee2.js  forestry-game-a09587c5eb7c605c.js  forestry-game-dc8f301a87b5c588.js  forestry-game-e01b4333fa724726.js  forestry-game-ecb0e25bcf2b17e6.js  forestry-game-fcb87edd6a64ab44.js  index.html  run_on_sim.sh  style.css
.github/workflows/: cd.yml
app/: Cargo.toml  index.html
assets/shaders/: proc_tree.wgsl
editor/: Cargo.toml
editor/src/: main.rs
game/: Cargo.toml
game/src/: data.rs  home.rs  lib.rs  tree.rs
game/src/home/: popups.rs  proc_tree.rs
game/src/tree/: gen.rs  mesh.rs  post.rs
src/: data.rs  home.rs  lib.rs  main.rs
src/home/: proc_tree.rs  quest_panel.rs
