[package]
name = "editor"
version = "0.1.0"
authors = ["SmnTin <smn.pankv@gmail.com>"]
edition = "2021"

[dependencies]
bevy = { version = "0.9.1", default-features = true }
bevy_easings = "0.9.0"
game = { path = "../game" }
bevy-inspector-egui = "0.16.5"
bevy_egui = "0.19.0"
bevy_framepace = "0.11.0"
egui_dock = "0.3.1"
egui-gizmo = "0.9.0"
bevy_mod_picking = "0.11.0"
smooth-bevy-cameras = "0.6.0"
rand = "0.8.4"